k8s/01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: 01-pod
  labels:
    app: spring-boot-app
spec:
  containers:
    - name: pod
      image: localhost:5000/k8s-springboot-app:latest
