k8s/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 03-deployment
  labels:
    app: spring-boot-app
spec:
  replicas: 7
  selector:
    matchLabels:
      app: spring-boot-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: 01-pod
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: pod
          image: localhost:5000/k8s-springboot-app:latest
