k8s/07-volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 03-deployment
  labels:
    app: spring-boot-app
  namespace: desarrollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: 01-pod
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: pod
          image: localhost:5000/k8s-springboot-app:latest
          volumeMounts:
            - name: my-volume
              mountPath: /volume-mount-path
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: 07-persistentvolume-claim
