k8s/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: desarrollo
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8080'
    prometheus.io/path: "actuator/prometheus"
spec:
  type: ClusterIP
  selector:
    app: spring-boot-app
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
